# wind-media-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cog.toml  mise.toml  prek.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr.yml  release-prepare.yml  release.yml
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/cmd/: config_cmd.rs  import.rs  info.rs  init.rs  list.rs  mod.rs  remove.rs  update.rs
tests/: e2e.rs
