[package]
name = "wind-media-cli"
version = "0.1.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
description = "CLI tool for managing World of Warcraft SharedMedia addons"
readme = "README.md"
repository = "https://github.com/fang2hou/wind-media-cli"
homepage = "https://github.com/fang2hou/wind-media-cli"
keywords = ["wow", "sharedmedia", "addon", "cli", "media"]
categories = ["command-line-utilities", "game-development"]
include = [
	"src/**/*",
	"README.md",
	"LICENSE",
	"Cargo.toml",
]

[dependencies]
wow-sharedmedia = "0.2"
clap = { version = "4", features = ["derive", "env", "unicode"] }
clap_complete = "4"
clap_complete_nushell = "4"
owo-colors = { version = "4", features = ["supports-colors"] }
comfy-table = "7"

serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
image = "0.25"
